removed java alias from entrypoint